--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <!-- <link href="https://unpkg.com/@blueprintjs/core@3.9.0/lib/css/blueprint.css" rel="stylesheet" /> -->
   <!-- <link href="https://unpkg.com/@blueprintjs/datetime@2.0.3/lib/css/blueprint-datetime.css" rel="stylesheet" /> -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700" rel="stylesheet">
 </head>
 
 <body>
